sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:15: error: value ==- is not a member of Int
    if(compte ==-1){
              ^